# repro-qt-wayland-bug

./: CMakeLists.txt  DisplayWidget.cpp  DisplayWidget.h  GLContextEGL.cpp  GLContextEGL.h  InitialWidget.cpp  InitialWidget.h  InitialWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ReplacementWidget.cpp  ReplacementWidget.h  main.cpp
